tests/baselines/reference/collisionThisExpressionAndLocalVarInConstructor.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndLocalVarInConstructor.ts (2 errors) ====
    class class1 {
        constructor() {
            var x2 = {
                doStuff: (callback) => () => {
                    var _this = 2;
                        ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInConstructor.ts(5,21): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
                    return callback(this);
                }
            }
        }
    }
    
    class class2 {
        constructor() {
            var _this = 2;
                ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInConstructor.ts(14,13): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
            var x2 = {
                doStuff: (callback) => () => {
                    return callback(this);
                }
            }
        }
    }